Implementando la navegacion entre ventanas

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,27 +2,31 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    android:id="@+id/navgraph"
+    app:startDestination="@id/listaClientesFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.registro_usarios_ap2.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:id="@+id/listaClientesFragment"
+        android:name="com.example.registro_usarios_ap2.viewmodel.ListaClientesFragment"
+        android:label="lista_clientes_fragment"
+        tools:layout="@layout/lista_clientes_fragment">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_to_clientesFragment"
+            app:destination="@id/clientesFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.registro_usarios_ap2.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+    <fragment
+        android:id="@+id/clientesFragment"
+        android:name="com.example.registro_usarios_ap2.viewmodel.ClientesFragment"
+        android:label="clientes_fragment"
+        tools:layout="@layout/clientes_fragment">
+
+
+        <argument
+            android:name="cliente"
+            app:argType="com.example.registro_usarios_ap2.model.Cliente"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
